fix initial visiblity of cart-box and animate product-image on single-product once

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -391,8 +391,11 @@ span.text-red {
 }
 .small-image {
 	border-radius: 10px;
-	overflow: hidden;
+	overflow: clip;
 	cursor: pointer;
+}
+.small-image * {
+	border-radius: 10px;
 }
 .small-image :hover {
 	opacity: 0.7;
